--- a/Reacture/Launch Screen.storyboard
+++ b/Reacture/Launch Screen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -19,40 +19,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-pF-A4v" userLabel="launchscreenBackground">
-                                <rect key="frame" x="-17" y="-72" width="617" height="672"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="28" y="567" width="544" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="Vu7-Y0-SFH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-cq-IxG">
-                                <rect key="frame" x="28" y="40" width="544" height="471"/>
+                                <rect key="frame" x="105" y="75" width="389" height="447"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="3bX-GS-dYo">
-                                        <rect key="frame" x="122" y="0.0" width="300" height="300"/>
+                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-gl-Zwr">
+                                        <rect key="frame" x="82" y="0.0" width="225" height="277"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="TcZ-By-Zsi"/>
+                                            <constraint firstAttribute="height" constant="277" id="TCe-zd-Tcx"/>
+                                            <constraint firstAttribute="width" constant="225" id="bOe-pL-e2g"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
-                                        <rect key="frame" x="128" y="300" width="289" height="132"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="132" id="Dou-ke-8wT"/>
-                                            <constraint firstAttribute="width" constant="289" id="MkR-lw-As5"/>
-                                        </constraints>
+                                        <rect key="frame" x="51" y="277" width="289" height="132"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="96"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“Your Front/Back Camera App”" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
-                                        <rect key="frame" x="0.0" y="432" width="544" height="39"/>
+                                        <rect key="frame" x="20" y="409" width="350" height="39"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="39" id="rZC-aA-8D4"/>
+                                            <constraint firstAttribute="width" constant="350" id="phk-Vu-RPW"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -60,41 +48,36 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="YOS-X2-iXK" firstAttribute="leading" secondItem="XEb-cq-IxG" secondAttribute="leading" id="TV1-sK-d5U"/>
+                                    <constraint firstAttribute="height" constant="447" id="A2G-NA-MMZ"/>
+                                    <constraint firstAttribute="width" constant="389" id="gTr-js-VEh"/>
                                 </constraints>
                             </stackView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
+                                <rect key="frame" x="28" y="567" width="544" height="25"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.20000000000000001" green="0.38039215686274508" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-37" id="2Qt-UK-WKc"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="2mt-JS-UR7"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="5el-fy-UL5"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="20" id="5iX-16-ipT"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="XEb-cq-IxG" secondAttribute="leading" id="6JQ-gn-H7D"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="trailing" secondItem="obG-Y5-kRd" secondAttribute="trailing" id="BJp-Cb-Uga"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="8" symbolic="YES" id="ErJ-Lq-ed3"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-72" id="L3p-jx-pgU"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Lu8-zy-ZnS"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="top" secondItem="XEb-cq-IxG" secondAttribute="bottom" constant="56" id="dQx-50-Z05"/>
-                            <constraint firstAttribute="trailing" secondItem="6uo-pF-A4v" secondAttribute="trailing" id="dhb-TI-APA"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="n8z-xu-mBZ"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" symbolic="YES" id="ovr-Gq-YpO"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="uEc-Za-VlP"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="yq8-7C-vBz"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="8" id="2mm-WH-bah"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="4Fh-Zs-LNz"/>
+                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="D71-qU-fKu"/>
+                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="aP8-G8-fEn"/>
+                            <constraint firstAttribute="trailing" secondItem="6uo-pF-A4v" secondAttribute="trailing" id="cbB-Ta-VwA"/>
+                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="eDU-NJ-Dur"/>
+                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="55" id="fUa-b6-h0R"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="obG-Y5-kRd" secondAttribute="trailing" constant="8" id="ko5-1e-bat"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="l5B-lm-DDU"/>
+                            <constraint firstItem="6uo-pF-A4v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mMN-vx-h0K"/>
+                            <constraint firstItem="XEb-cq-IxG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tOz-et-3gi"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="n8z-xu-mBZ"/>
-                                <exclude reference="ovr-Gq-YpO"/>
-                                <exclude reference="2mt-JS-UR7"/>
-                                <exclude reference="uEc-Za-VlP"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="86" y="402"/>
         </scene>
     </scenes>
     <resources>
