--- a/Reacture/Launch Screen.storyboard
+++ b/Reacture/Launch Screen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -21,63 +21,89 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-pF-A4v" userLabel="launchscreenBackground">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="28" y="567" width="544" height="25"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-cq-IxG">
-                                <rect key="frame" x="106" y="76" width="320" height="445"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="CCi-dX-MLP">
+                                <rect key="frame" x="0.0" y="65" width="400" height="470"/>
                                 <subviews>
-                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-gl-Zwr">
-                                        <rect key="frame" x="48" y="0.0" width="225" height="277"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="277" id="TCe-zd-Tcx"/>
-                                            <constraint firstAttribute="width" constant="225" id="bOe-pL-e2g"/>
-                                        </constraints>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-15" translatesAutoresizingMaskIntoConstraints="NO" id="k1I-zR-HrR">
+                                        <rect key="frame" x="-20" y="-20" width="360" height="235"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
+                                                <rect key="frame" x="20" y="20" width="320" height="162"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="96"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" ambiguous="YES" text="“Your Front/Back Camera App”" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
+                                                <rect key="frame" x="20" y="177" width="320" height="38"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="22"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <variation key="widthClass=compact" axis="vertical"/>
+                                    </stackView>
+                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-gl-Zwr">
+                                        <rect key="frame" x="20" y="30" width="360" height="410"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
-                                        <rect key="frame" x="25" y="277" width="271" height="137"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="90"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="“Your Front/Back Camera App”" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
-                                        <rect key="frame" x="7" y="414" width="306" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="350" id="phk-Vu-RPW"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="22"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
+                                        <rect key="frame" x="20" y="20" width="360" height="430"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="445" id="A2G-NA-MMZ"/>
-                                    <constraint firstAttribute="width" constant="320" id="gTr-js-VEh"/>
-                                </constraints>
+                                <variation key="widthClass=compact" axis="vertical"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="8" id="2mm-WH-bah"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="4Fh-Zs-LNz"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="D71-qU-fKu"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="aP8-G8-fEn"/>
-                            <constraint firstAttribute="trailing" secondItem="6uo-pF-A4v" secondAttribute="trailing" id="cbB-Ta-VwA"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="eDU-NJ-Dur"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" priority="250" constant="55" id="fUa-b6-h0R"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="obG-Y5-kRd" secondAttribute="trailing" constant="8" id="ko5-1e-bat"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="l5B-lm-DDU"/>
-                            <constraint firstItem="6uo-pF-A4v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mMN-vx-h0K"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tOz-et-3gi"/>
+                            <constraint firstItem="CCi-dX-MLP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="20" id="4Pp-us-uyM"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="CCi-dX-MLP" secondAttribute="bottom" constant="20" id="5eu-b5-6GC"/>
+                            <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8hK-US-BRA"/>
+                            <constraint firstItem="CCi-dX-MLP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="20" id="MLY-at-dwg"/>
+                            <constraint firstAttribute="trailing" secondItem="6uo-pF-A4v" secondAttribute="trailing" id="RSi-nQ-863"/>
+                            <constraint firstItem="CCi-dX-MLP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="20" id="b8q-hu-wNS"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="dF1-zq-DAo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CCi-dX-MLP" secondAttribute="trailing" constant="20" id="eGC-wK-03P"/>
+                            <constraint firstItem="CCi-dX-MLP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="20" id="ikp-bL-aYg"/>
+                            <constraint firstItem="6uo-pF-A4v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="vf3-Tn-xUE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CCi-dX-MLP" secondAttribute="trailing" constant="20" id="zLF-1S-CRr"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="8hK-US-BRA"/>
+                                <exclude reference="RSi-nQ-863"/>
+                                <exclude reference="vf3-Tn-xUE"/>
+                                <exclude reference="4Pp-us-uyM"/>
+                                <exclude reference="MLY-at-dwg"/>
+                                <exclude reference="b8q-hu-wNS"/>
+                                <exclude reference="eGC-wK-03P"/>
+                                <exclude reference="ikp-bL-aYg"/>
+                                <exclude reference="zLF-1S-CRr"/>
+                                <exclude reference="5eu-b5-6GC"/>
+                                <exclude reference="dF1-zq-DAo"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="8hK-US-BRA"/>
+                                <include reference="RSi-nQ-863"/>
+                                <include reference="vf3-Tn-xUE"/>
+                                <include reference="4Pp-us-uyM"/>
+                                <include reference="MLY-at-dwg"/>
+                                <include reference="b8q-hu-wNS"/>
+                                <include reference="eGC-wK-03P"/>
+                                <include reference="ikp-bL-aYg"/>
+                                <include reference="zLF-1S-CRr"/>
+                                <include reference="5eu-b5-6GC"/>
+                                <include reference="dF1-zq-DAo"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="86" y="402"/>
+            <point key="canvasLocation" x="85.5" y="402"/>
         </scene>
     </scenes>
     <resources>
